patterns/adapter/manifests/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
spec:
  selector:
    istio: ingressgateway # Используем Istio Ingress Gateway
  servers:
    - port:
        number: 8080
        name: http-flask
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 89
        name: http-react
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: react-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - shared-gateway
  http:
    - match:
        - port: 89
      route:
        - destination:
            host: react-service
            port:
              number: 80
    - match:
        - port: 8080
      route:
        - destination:
            host: react-service
            port:
              number: 80
